test/extern/ferguson/record-field-type-mismatch.good
record-field-type-mismatch.chpl:4: error: extern declaration type 'int' does not match C type 'char'
